# calc

./: +  CMakeLists.txt  brief.txt
include/: .functions.h.swp  .interpreter.h.swp  functions.h  interpreter.h  matrix.h
include/algebra/: transformations.h
include/calculus/: equations.h
include/structures/: .bintree.h.swp  bintree.h
src/: .interpreter.c.swp  .prueba_interprete1-extraccion_de_tokens.c.swp  bintree.c  interpreter.c  main.cpp  matrix.c  prueba-bintree.c  prueba_compute_type-reconocer_expresiones.c  prueba_interprete1-extraccion_de_tokens.c  prueba_interprete2-construccion_arbol_operacion.c  prueba_tree  transformations.c
